2000-12-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lapack/dgelss.f (DGELSS): Use correct leading dimension for
	workspace array passed to dgemm and dlacpy.
	(ZGELSS): Likewise, for calls to zgemm and zlacpy.

2000-07-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DISTSUBDIRS): New macro.
	(dist): Use it instead of SUBDIRS.

2000-06-30  Steven G. Johnson  <stevenj@alum.mit.edu>

	* blas-xtra, lapack-xtra: New directories.
	* Makefile.in (CRUFT_DIRS): Add them to the list.
	Substitute @BLAS_DIR@ and @LAPACK_DIR@ here.
	* blas-xtra/xerbla.f: Move here from blas subdirectory.
	* blas-xtra/Makefile.in: New file.
	* lapack-xtra/xdlamch.f, lapack-xtra/xdlange.f,
	lapack-xtra/xzlange.f: Move here from lapack subdirectory.
	* lapack-xtra/Makefile.in: New file.

2000-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/Makefile.in (install, uninstall): Include files go in
	$(octincludedir)/octave, not just $(octincludedir).

2000-03-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (LIBRARIES): Conditionally define. 	
	(libraries): Depend on $(SUBDIRS) only.
	Make $(LIBRARIES) using a recursive invocation of make once
	$(SUBDIRS) are up to date.
	(.NOTPARALLEL): New target, for GNU Make 3.79.

2000-03-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (libcruft.$(LIBEXT)): New target.
	(all): Depend on `libraries', not `$(SUBDIRS) shared-lib'.
	Conditionally construct `libraries' target.
	(libcruft.$(SHLEXT_VER)): Delete target before rebuilding.
	* Makerules.in (LIBCRUFT): Delete variable.
	(LIBCRUFT_DEPEND): Conditionally define to $(LIBCRUFT_OBJS) only.
	(all): Print warning if anything is done.
	(stmp-pic): New target.
	($CRUFT_PICOBJ): Depend on stmp-pic.
	(clean, mostlyclean): Remove pic and stmp-pic.

2000-02-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lapack/dbdsqr.f, lapack/dgeesv.f, lapack/dgelss.f,
	lapack/dgesvd.f, lapack/dlasq1.f, lapack/dlasq2.f,
	lapack/dlasq3.f, lapack/dlasq3.f, lapack/dlasq4.f,